mobing image files and updating style

--- a/src/Components/ProductDetail/style.css
+++ b/src/Components/ProductDetail/style.css
@@ -2,6 +2,6 @@
   background-color: #fcc141 !important;
   border: 0 !important;
   border-radius: 20px !important;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Chivo', sans-serif !important;
   font-size: 0.8rem !important;
 }
