--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -1,17 +1,38 @@
 .card-product {
-  padding: 15% 10%;
-  border-radius: 5px;
+  padding: 8% 3%;
+  border-radius: 10px;
   margin: 2% 0;
   box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.30);
   opacity: 90%;
+  background-color: #fcc141;
+  display: flex;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .card-customized-title {
-  font-size: 20px;
-  color: white;
-  font-family: Roboto;
+  font-size: 18px;
+  color: black;
   font-weight: 500;
   text-align: center;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Chivo', sans-serif;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center
+}
+
+.card-image {
+  height: 70px
+}
+
+@media (min-width: 900px) {
+  .card-customized-title {
+    font-size: 40px;
+  }
+  .card-product {
+    display: flex;
+    justify-content: center;
+  }  
 }
