--- a/src/Components/ModalCart/style.css
+++ b/src/Components/ModalCart/style.css
@@ -2,9 +2,13 @@
   background-color: #5a050b
 }
 
+.modal-content {
+  border: 0 !important
+}
+
 .modal-header-title {
   color: white !important;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Chivo', sans-serif;
   font-size: 0.8rem;
   margin: 0;
 }
@@ -17,7 +21,7 @@
 
 .product-name {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Chivo', sans-serif;
   font-size: 1.2rem;
 }
 
@@ -37,13 +41,13 @@
 }
 
 .total-price {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Chivo', sans-serif;
   font-size: 1rem;
 }
 
 .price,
 .subtotal-price  {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Chivo', sans-serif;
   font-size: 0.8rem;
 }
