--- a/src/Components/ProductDetail/style.css
+++ b/src/Components/ProductDetail/style.css
@@ -1,8 +1,12 @@
-button  {
+button {
   background-color: #fcc141 !important;
   border: 0 !important;
   border-radius: 20px !important;
   font-family: 'Chivo', sans-serif;
-  color: black !important; 
+  color: black !important;
   font-size: 0.8rem !important;
+}
+
+.product-img-cart {
+  height: 3em;
 }
