--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -1,13 +1,29 @@
 .card-product {
-  padding: 8% 3%;
+  height: 12em;
+  width: 100%;
   border-radius: 10px;
-  margin: 2% 0;
+  margin: 4% 0;
+  align-items: center;
   box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.30);
   opacity: 90%;
   background-color: #fcc141;
   display: flex;
   background-repeat: no-repeat;
   background-size: 100%;
+  padding: 0 20px;
+  background-position: center;
+}
+
+.card-product-without-backgroundImg {
+  width: 100%;
+  padding: 8% 3%;
+  border-radius: 10px;
+  margin: 2% 0;
+  align-items: center;
+  box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.30);
+  opacity: 90%;
+  background-color: #fcc141;
+  display: flex;
 }
 
 .card-customized-title {
@@ -25,6 +41,20 @@
 
 .card-image {
   height: 70px
+}
+
+button[disabled]{
+  opacity: 0.2;
+}
+
+.card-backgroundImg-title {
+  color: white;
+  font-weight: 700;
+  font-size: 30px;
+  font-family: 'Chivo', sans-serif;
+  text-align: left;
+  margin: 0;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.30);
 }
 
 @media (min-width: 900px) {
