--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -1,6 +1,7 @@
 .custom-navbar {
   background-color: #fcc141;
   padding: 10px !important;
+  margin: 0 !important;
 }
 .cart-icon {
   cursor: pointer;
