--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -44,17 +44,17 @@
 }
 
 button[disabled]{
-  opacity: 0.2;
+  opacity: 0.75;
+  cursor: not-allowed;
 }
 
 .card-backgroundImg-title {
-  color: white;
-  font-weight: 700;
+  color: black;
+  font-weight: 600;
   font-size: 30px;
   font-family: 'Chivo', sans-serif;
   text-align: left;
   margin: 0;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.30);
 }
 
 @media (min-width: 900px) {
