--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -49,12 +49,13 @@ button[disabled]{
 }
 
 .card-backgroundImg-title {
-  color: black;
   font-weight: 600;
   font-size: 30px;
   font-family: 'Chivo', sans-serif;
   text-align: left;
   margin: 0;
+  color: #fcc141;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 @media (min-width: 900px) {
