--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -49,12 +49,18 @@ button[disabled]{
 }
 
 .card-backgroundImg-title {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 30px;
   font-family: 'Chivo', sans-serif;
-  text-align: left;
+  text-align: center;
   margin: 0;
   color: #fcc141;
+  line-height: 29px;
+  letter-spacing: -0.9px;
+}
+
+a {
+  width: 100%;
 }
 
 @media (min-width: 900px) {
