--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -36,7 +36,9 @@
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  line-height: 18px;
+  letter-spacing: -0.9px;
 }
 
 .card-image {
