adding mobile and website style

--- a/src/Components/CardProduct/style.css
+++ b/src/Components/CardProduct/style.css
@@ -68,6 +68,7 @@ a {
 @media (min-width: 900px) {
   .card-customized-title {
     font-size: 40px;
+    line-height: 40px;
   }
   .card-product {
     display: flex;
