--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ div:where(.swal2-container) div:where(.swal2-actions) {
   margin: 0.5em auto 0;
 }
 
-#body {
+body {
   height: 100%;
   background-image: url(./assets/background.jpg);;
   background-color: #c9511d;
